GET request + view rendered

--- a/src/app/enrollee/enrollee.component.html
+++ b/src/app/enrollee/enrollee.component.html
@@ -1,1 +1,11 @@
-<p>enrollee works!</p>
+<div class="" *ngFor="let name of names">
+  <div class="fontColor">
+    <h5 class="card-title">{{name.name}}</h5>
+    <h5 class="card-title">{{name.active}}</h5>
+    <h5 class="card-title">{{name.dateOfBirth}}</h5>
+    <h5 class="card-title">{{name.id}}</h5>
+
+
+  </div>
+</div>
+<h1>test</h1>
