--- a/src/app/enrollee/enrollee.component.html
+++ b/src/app/enrollee/enrollee.component.html
@@ -1,47 +1,133 @@
 <div class="container w-75">
-  <div class="row">
-    <div class="col-6 mt-2 mb-2 " (mouseenter)="toggle(i)" *ngFor="let name of names;let i= index">
-      <div class="card bg-transparent" [ngClass]="{' shadow p-3 mb-5  rounded ': i == index && flag }">
-        <div class="card-body">
-          <h5 class="card-title">{{name.name}}</h5>
-          <div class="row">
-            <div class="col-6 card-text border-bottom mb-1 mt-1">User ID : </div>
-            <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.id}}</div>
-            <div class="col-6 card-text border-bottom mb-1 mt-1">Activation status : </div>
-            <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.active}}</div>
-            <div class="col-6 card-text border-bottom mb-1 mt-1">Date of Birth : </div>
-            <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.dateOfBirth}}</div>
-          </div>
-          <div *ngIf=" i == index && flag">
 
+  <div>
+    <button type="button" (click)="onDisplayAll()" class="btn btn-primary btn-lg">Display All</button>
+    <button type="button" (click)="onDisplayActive()" class="btn btn-primary btn-lg">Display Active</button>
+    <button type="button" (click)="onDisplayInactive()" class="btn btn-primary btn-lg">display inactive</button>
+  </div>
 
-            <div class="input-group input-group-sm mb-3 mt-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Edit name :</span>
+  <div [ngSwitch]="pickDisplay">
+
+    <div *ngSwitchCase="'isDisplay'">
+      <div class="w-75 mx-auto" (mouseenter)="toggle(i)" *ngFor="let name of names;let i= index">
+        <div class="mt-2 mb-2 ">
+          <div class="card bg-transparent" [ngClass]="{' shadow p-3 mb-5  rounded ': i == index && flag }">
+            <div class="card-body">
+              <h5 class="card-title">{{name.name}}</h5>
+              <div class="row">
+                <div class="col-6 card-text border-bottom mb-1 mt-1">User ID : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.id}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Activation status : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.active}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Date of Birth : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.dateOfBirth}}</div>
               </div>
-              <input type="text" class="form-control" [(ngModel)]="newName" aria-label="Small"
-                aria-describedby="inputGroup-sizing-sm">
-            </div>
-
-            <div class="input-group input-group-sm mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Edit activation (true or false) :</span>
+              <div *ngIf=" i == index && flag">
+                <div class="input-group input-group-sm mb-3 mt-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit name :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="newName" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit activation (true or false) :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="active" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
               </div>
-              <input type="text" class="form-control" [(ngModel)]="active" aria-label="Small"
-                aria-describedby="inputGroup-sizing-sm">
+              <div class="text-center">
+                <a href="#" *ngIf=" i == index && flag" class="btn btn-primary w-50 "
+                  (click)="onUpdate(name.id)">Save</a>
+              </div>
             </div>
-
-
-
           </div>
-          <div class="text-center">
+        </div>
 
-            <a href="#" *ngIf=" i == index && flag" class="btn btn-primary w-50 " (click)="onUpdate(name.id)">Save</a>
+      </div>
+    </div>
+
+    <div *ngSwitchCase="'isActive'">
+      <div class="w-75 mx-auto" (mouseenter)="toggle(i)" *ngFor="let name of names;let i= index">
+        <div class="mt-2 mb-2 " *ngIf="name.active">
+          <div class="card bg-transparent" [ngClass]="{' shadow p-3 mb-5  rounded ': i == index && flag }">
+            <div class="card-body">
+              <h5 class="card-title">{{name.name}}</h5>
+              <div class="row">
+                <div class="col-6 card-text border-bottom mb-1 mt-1">User ID : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.id}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Activation status : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.active}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Date of Birth : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.dateOfBirth}}</div>
+              </div>
+              <div *ngIf=" i == index && flag">
+                <div class="input-group input-group-sm mb-3 mt-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit name :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="newName" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit activation (true or false) :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="active" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
+              </div>
+              <div class="text-center">
+                <a href="#" *ngIf=" i == index && flag" class="btn btn-primary w-50 "
+                  (click)="onUpdate(name.id)">Save</a>
+              </div>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
 
-
+    <div *ngSwitchCase="'isInactive'">
+      <div class="w-75 mx-auto" (mouseenter)="toggle(i)" *ngFor="let name of names;let i= index">
+        <div class="mt-2 mb-2 " *ngIf="name.active == false">
+          <div class="card bg-transparent" [ngClass]="{' shadow p-3 mb-5  rounded ': i == index && flag }">
+            <div class="card-body">
+              <h5 class="card-title">{{name.name}}</h5>
+              <div class="row">
+                <div class="col-6 card-text border-bottom mb-1 mt-1">User ID : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.id}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Activation status : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.active}}</div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1">Date of Birth : </div>
+                <div class="col-6 card-text border-bottom mb-1 mt-1"> {{name.dateOfBirth}}</div>
+              </div>
+              <div *ngIf=" i == index && flag">
+                <div class="input-group input-group-sm mb-3 mt-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit name :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="newName" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Edit activation (true or false)
+                      :</span>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="active" aria-label="Small"
+                    aria-describedby="inputGroup-sizing-sm">
+                </div>
+              </div>
+              <div class="text-center">
+                <a href="#" *ngIf=" i == index && flag" class="btn btn-primary w-50 "
+                  (click)="onUpdate(name.id)">Save</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
